src/snapshots/aic__parser__tests__parse_unary_expression.snap
---
source: src/parser.rs
expression: program
---
statements:
  - Expr:
      expr:
        UnaryOp:
          op: Neg
          expr:
            IntLit: 42
