src/snapshots/aic__parser__tests__parse_variable_declaration_without_type.snap
---
source: src/parser.rs
expression: program
---
statements:
  - LetDecl:
      name: x
      type: ~
      value:
        IntLit: 42
