src/snapshots/aic__parser__tests__parse_variable_declaration_without_value.snap
---
source: src/parser.rs
expression: program
---
statements:
  - LetDecl:
      name: x
      type: I32
      value: ~
